--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && mv build ../public",
+    "build": "react-scripts build && cp build/* ../public",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
